feat(task-260901-材质): 材质加「元素组成」+「含量配置」两层，导入改单表4列只增不改
材质模型：从「材质 = 一组固定含量」改为「材质 = 显式的元素组成 + 下挂多组含量配置」。
新表 material_recipe_composition（元素组成，材质的显式属性）+ material_recipe_config
（含量配置，编号 <材质编号>-<两位序号>）；material_recipe_element 由挂 recipe 改挂 config；
material_recipe 加 allow_custom_content。迁移 V400（含存量 258 材质 / 621 元素行双向回填 +
三条 RAISE EXCEPTION 断言）。

导入：单表 4 列（材质/组号/元素符号/含量），材质编号与元素编号全自动，语义由「整体重灌覆盖」
改「按含量内容比对只增不改」；旧两 sheet 模板下线。组号仅 Excel 内分组、不落库。

六条派生规则（AC 可断言的语义，非实现细节）：
- M-0  元素组成是材质的显式属性，配置元素集合须与它逐个相等；矩阵列序取自它
- M-0a UI 新建与 Excel 导入是同一条规则的两个入口，判据共用 MaterialRecipeRules（FT-4 盯着）
- M-0b 无 ACTIVE 配置时元素组成可改，有配置后只读（后端 409 COMPOSITION_LOCKED）
- M-1  配置编号 String.format("%02d")，seq 含 INACTIVE ⇒ 编号不回收；禁用 PG lpad
- M-3/M-4 导入只比对 ACTIVE 配置、不复活已停用；相等判据 BigDecimal.compareTo，不套 Σ 容差
- M-5  allow_custom_content 优先于元素级 is_locked
- M-5b 新建材质时各组元素组成须全一致，任一不一致则整材质跳过 ⇒ 结果不依赖文件行序

UI：材质管理页取消行展开、点行任意处开抽屉（捕获阶段拦截，不误选）；编辑抽屉 1200 宽 +
元素组成区 + 含量配置矩阵；新建材质独立成配方卡片形态；新增配置不选元素（按组成预填只读）；
含量显示去尾随零（纯字符串正则，不过 JS number）；选择框过滤按 fronttask §0 分类。
元素组成按权威链 element_no 关联 element 主表显示（task-0709 B2 口径），只改读不改写。

AC 37 条；接口层 33/33；证伪实验 5/5；E2E 20 跑 19；严格 Flyway 校验下后端 70 例全绿。
主线亲验 13 条 + 原型 1/2/3/6 逐屏比对。

遗留（未做，非本次范围）：
- B-3（DROP CONSTRAINT uq_recipe_element + DROP COLUMN recipe_id）待批，文件在任务目录
  待批-V401__*.sql，未放进 db/migration。⚠️ 必须先合并本分支（旧夹具随之消失）再执行，
  否则主仓旧夹具会无上限插重复行
- V400 文件正文仍写「V399 迁移断言」，属改号遗留，已应用不可改内容，刻意不修
- material_master.material_type 被写入材质名（ConfigureProductService:388 传 recipe.symbol），
  实测值 AgNi；架构收敛归 选配功能 会话的新任务，本次仅在 AC-19③b 留痕

Co-Authored-By: Claude Opus 5 (1M context) <noreply@anthropic.com>